# rag-document-qa

./: .env.example  .gitignore  Dockerfile  README.md  logs.db  pyproject.toml  requirements.txt  streamlit_app.py
app/: analytics.py  config.py  db.py  ingest.py  main.py  rag.py  schemas.py
