[project]
name = "rag-document-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "torchvision>=0.28.0",
    "uvicorn>=0.51.0",
]
